--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;700&display=swap');
 body {
-    font-family: 'Cabin', sans-serif;
-    background-color: #F2F6FC;
+    font-family: 'Lexend', sans-serif;
+    /* background-color: #F2F6FC; */
 }
 
 a {
