--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -73,10 +73,8 @@
     position: relative;
 }
 
-
 .portfolio-sample {
     border-radius: 10px;
-    
 }
 
 .portfolio-label {
@@ -86,7 +84,6 @@
     bottom: 0;
     opacity: .9;
     background-color: white;
-    
 }
 
 .portfolio-label h6 {
@@ -133,7 +130,6 @@
     position: relative;
 }
 
-
 .upload-desc-area ul {
     padding-left: 1.2rem;
 }
@@ -145,14 +141,50 @@
     margin-right: .5rem;
 }
 
-
-
 .text-blue {
     color: #0052cc;
 }
 
-
-.membership-table {
-    
+.price-table thead tr th {
+    padding-left: 25px;
+    border-right: 2px solid #172b4d1c;
 }
 
+.price-table thead {
+    border: 2px solid #172b4d1c;
+}
+
+.price-table tbody th {
+    padding-left: 25px;
+    font-size: 14px;
+    font-weight: 500;
+    color: #172B4D;
+    border-bottom-width: 0px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.price-table tbody tr {
+    border-color: inherit;
+    border-style: solid;
+    border-width: 0;
+    border-right: 2px solid #172b4d1c;
+    border-left: 2px solid #172b4d1c;
+    border-bottom: 0px solid #172b4d1c;
+    border-top: 0px solid #172b4d1c;
+    border-bottom-width: 0px !important;
+}
+
+.price-table tbody td {
+    padding: .5rem .5rem;
+    background-color: var(--bs-table-bg);
+    border-bottom: 0px solid #172b4d1c !important;
+    box-shadow: inset 0 0 0 9999px var(--bs-table-accent-bg);
+    border-left: 2px solid #172b4d1c;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.price-table tbody>tr:last-child {
+    border-bottom: 2px solid #172b4d1c !important;
+}
