--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -205,3 +205,11 @@
     margin-right: 1em;
     border: 2px solid #172B4D;
 }
+
+.process {
+    padding: 1rem;
+    border: 2px solid rgb(218, 218, 218);
+    border-radius: 5px;
+    margin-bottom: 1rem;
+    margin-left: 1rem;
+}
