--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -213,3 +213,62 @@
     margin-bottom: 1rem;
     margin-left: 1rem;
 }
+
+
+
+.community-social a,
+.community-message a {
+    margin-right: 1.5rem;
+}
+.community-social a {
+    margin-right: 1.5rem;
+}
+
+.bg-dark-blue {
+    background-color: #172B4D;
+}
+
+.navbar i {
+    margin-right: .5rem;
+}
+
+.navbar .nav-item {
+    margin-right: 1.5rem;
+}
+
+.feed-body .card-header {
+    background-color: #80aae92d;
+    border: 0;
+    padding: 2rem;
+}
+
+.all-se-message {
+    margin-left: 4rem;
+    
+}
+
+.community-message {
+    margin-left: 3.5rem;
+    
+}
+
+.feed-body .card-body {
+    padding: 2rem;
+}
+
+.shadow-cust {
+    box-shadow: 0 .05rem 1rem rgba(0,0,0,.15)!important;
+}
+
+.btn-light-blue {
+    color: #ffffffbd;
+    background-color: #f8f9fa47;
+    border: 0;
+}
+.btn-light-blue:hover {
+    color: #000000;
+    background-color: #ffffff;
+   
+}
+
+
