--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;700&display=swap');
 body {
-    font-family: 'Lexend', sans-serif;
+    font-family: 'Circular Std Book';
+    font-weight: 500;
+    font-style: normal;
     /* background-color: #F2F6FC; */
 }
 
@@ -231,4 +232,25 @@ a {
     margin-left: 0;
     padding-top: 15px;
     padding-bottom: 15px;
+}
+
+.digit-group .form-control {
+    display: inline-flex;
+    width: 24%;
+    padding: 1rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 2px solid #172b4d1f;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+    font-size: 29px;
+    color: #172B4D;
+    font-weight: 500;
 }
