--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -280,23 +280,25 @@
 
 .rated-design {
     background-image: url(../img/design-1.jpg);
-    background-color: #cccccc; /* Used if the image is unavailable */
-    height: 100px; /* You must set a specified height */
-    background-position: center; /* Center the image */
-    background-repeat: no-repeat; /* Do not repeat the image */
-    background-size: cover; /* Resize the background image to cover the entire container */
+    background-color: #cccccc;
+    /* Used if the image is unavailable */
+    height: 100px;
+    /* You must set a specified height */
+    background-position: center;
+    /* Center the image */
+    background-repeat: no-repeat;
+    /* Do not repeat the image */
+    background-size: cover;
+    /* Resize the background image to cover the entire container */
     border-radius: 10px;
     position: relative;
 }
-
 
 .btn-light-trans {
     color: #5c5e83;
     background-color: #f8f9fa47;
     border: 2px solid #e3e5e9;
 }
-
-
 
 .design-serial-no {
     position: absolute;
@@ -316,22 +318,31 @@
 
 .win-card {
     background-image: url(../img/prize.png);
-    background-color: #ffffff; /* Used if the image is unavailable */
+    background-color: #ffffff;
+    /* Used if the image is unavailable */
     /* height: 300px; You must set a specified height */
-    background-position: center; /* Center the image */
-    background-repeat: no-repeat; /* Do not repeat the image */
-    background-size: auto; /* Resize the background image to cover the entire container */
+    background-position: center;
+    /* Center the image */
+    background-repeat: no-repeat;
+    /* Do not repeat the image */
+    background-size: auto;
+    /* Resize the background image to cover the entire container */
     border-radius: 10px;
     position: relative;
 }
 
 .wining-design {
     background-image: url(../img/portfolio1.jpg);
-    background-color: #cccccc; /* Used if the image is unavailable */
-    height: 200px; /* You must set a specified height */
-    background-position: center; /* Center the image */
-    background-repeat: no-repeat; /* Do not repeat the image */
-    background-size: cover; /* Resize the background image to cover the entire container */
+    background-color: #cccccc;
+    /* Used if the image is unavailable */
+    height: 200px;
+    /* You must set a specified height */
+    background-position: center;
+    /* Center the image */
+    background-repeat: no-repeat;
+    /* Do not repeat the image */
+    background-size: cover;
+    /* Resize the background image to cover the entire container */
     border-radius: 10px;
     position: relative;
 }
@@ -351,4 +362,43 @@
     background-color: #172b4d1f !important;
     margin-right: .5rem;
     color: #2a3952c7;
+}
+
+.search-contest input::placeholder {
+    color: rgba(0, 0, 0, 0.575);
+    opacity: 1;
+}
+
+.more-option-collapse .card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #ffffffde;
+    background-clip: border-box;
+    /* border: 1px solid rgba(0,0,0,.125); */
+    border-radius: .25rem;
+    color: #172b4d;
+    box-shadow: 0 .05rem 1rem rgba(0, 0, 0, .15)!important;
+}
+
+.bg-guaranteed {
+    background-color: #36B37E;
+}
+
+.bg-featured {
+    background-color: #FDA226;
+}
+
+.bg-urgent {
+    background-color: #FF5353;
+}
+
+.bg-sealed {
+    background-color: #3BA7E4;
+}
+
+.bg-pro {
+    background-color: #172B4D;
 }
