--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -505,3 +505,25 @@
 .user-port-sample:hover .show-on-hover {
     display: block;
 }
+
+.top-skill .badge {
+    background-color: #f0f1fa;
+    color: #172B4D;
+    padding: .8rem;
+    margin-bottom: 5px;
+}
+
+.languages .badge {
+    background-color: #f0f1fa;
+    color: #313d52;
+    padding: .5rem;
+    margin-bottom: 5px;
+}
+
+.ellipse-connect {
+    border-right: 2px solid #0052cc;
+    height: 50px;
+    position: absolute;
+    top: 87px;
+    left: 31px;
+}
