--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -406,6 +406,9 @@
 .bg-pro {
     background-color: #172B4D;
 }
+.bg-nda {
+    background-color: #503CD8;
+}
 
 .btn-light-cust {
     color: #000;
@@ -581,3 +584,58 @@
     margin-right: 1rem;
 }
 
+.slidecontainer {
+    width: 100%;
+  }
+  
+  .slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 8px;
+    background: #e6e6e6;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+    border-radius: 5px;
+  }
+  
+  .slider:hover {
+    opacity: 1;
+  }
+  
+  .slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 15px;
+    height: 15px;
+    background: #0052cc;
+    cursor: pointer;
+    border-radius: 50%;
+  }
+  
+  /* .slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    background: #4CAF50;
+    cursor: pointer;
+  } */
+
+  .price-container {
+      padding: 1rem 1rem;
+      border-radius: 8px;
+      border: 2px solid black;
+  }
+
+
+  .contest-type-cutom {
+      background-color: #f5f5f5;
+      padding: 1rem;
+      border-radius: 5px;
+      margin-top: 1rem;
+  }
+
+  .contest-type-cutom .form-check-input {
+    width: 1.3em;
+    height: 1.3em;
+  }
