--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -316,6 +316,12 @@
     color: #F8B128;
 }
 
+.rating-star-dark i {
+    color: #171a2e;
+}
+
+
+
 .color-yellow {
     color: #F8B128;
 }
@@ -366,11 +372,23 @@
     background-color: #172b4d1f !important;
     margin-right: .5rem;
     color: #2a3952c7;
+    margin-bottom: .5rem;
 }
 
 .search-contest input::placeholder {
     color: rgba(0, 0, 0, 0.575);
     opacity: 1;
+}
+
+
+.search-entry {
+    width: 300px;
+    display: inline;
+}
+
+.entry-sort {
+    width: 180px;
+    display: inline;
 }
 
 .more-option-collapse .card {
@@ -744,4 +762,40 @@
     background-size: cover;
     /* Resize the background image to cover the entire container */
     background-color: #172b4d1c;
+}
+
+
+.btn-entry-filter {
+    color: #172b4d;
+    background-color: #e6e6e6;
+    border-color: #e6e6e6;
+}
+
+.btn-entry-filter.active {
+    color: #ffffff;
+    background-color: #172b4d;
+    border-color: #172b4d;
+}
+
+.entry-display .card {
+    border: inherit;
+    box-shadow: 0 .3rem 2rem rgba(0,0,0,0.12)!important;
+    border-radius: 10px;
+}
+
+.entry-display .col-md-3 {
+    margin-bottom: 2rem;
+}
+
+.entry-display .card-img-top {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    height: 195px;
+}
+
+.btn-light-cust-blue {
+    color: #1560ce;
+    background-color: #c4d9ff;
+    border: 0;
+    
 }
