--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -35,4 +35,128 @@
     .all-people {
         width: 100%;
     }
+    .welcome-block .card {
+        width: 100% !important;
+        margin-bottom: 15px;
+    }
+    .welcome-features a {
+        margin-right: 20px;
+        margin-left: 20px;
+    }
+    .news-feed-button {
+        margin-bottom: inherit;
+    }
+    .bottom-settings {
+        position: absolute;
+        bottom: 0;
+        background: #f3f3f3;
+        width: 100%;
+        padding: 25px;
+        left: 0;
+    }
+    /* Push Menu start  */
+    #menu-switch {
+        display: none;
+    }
+    #menu {
+        position: fixed;
+        top: 0;
+        left: -300px;
+        width: 300px;
+        height: 100%;
+        padding: 20px 20px;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+        -webkit-transition: all .3s ease-in;
+        -moz-transition: all .3s ease-in;
+        -o-transition: all .3s ease-in;
+        transition: all .3s ease-in;
+        text-align: center;
+        background-color: #fff;
+        z-index: 10;
+    }
+    #menu li {
+        list-style: none;
+        text-align: start;
+    }
+    #menu .brand {
+        line-height: .6;
+    }
+    #menu ul {
+        padding: 0;
+        margin-top: 10px;
+    }
+    #menu ul li a {
+        display: block;
+        font-weight: 500;
+        line-height: 35px;
+        -webkit-transition: all .3s ease;
+        -moz-transition: all .3s ease;
+        -o-transition: all .3s ease;
+        transition: all .3s ease;
+        text-decoration: none;
+        text-transform: capitalize;
+        border-top: 1px solid #eee;
+    }
+    #menu ul li:last-child a {
+        border-bottom: 1px solid #eee;
+    }
+    #menu ul li a:hover {
+        letter-spacing: 1px;
+    }
+    #menu-switch:checked~#menu {
+        left: 0;
+    }
+    /* MAIN PAGE */
+    .page-wrap {
+        padding: 50px;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+        -webkit-transition: all .3s ease-in;
+        -moz-transition: all .3s ease-in;
+        -o-transition: all .3s ease-in;
+        transition: all .3s ease-in;
+    }
+    #menu-switch:checked~.page-wrap {
+        margin-left: 300px;
+    }
+    /* MENU TOGGLE ICON */
+    #menu-toggle:focus {
+        outline: none;
+    }
+    #menu-toggle {
+        display: inline-block;
+        position: absolute;
+        cursor: pointer;
+        border: none;
+        -webkit-border-radius: 50px;
+        -moz-border-radius: 50px;
+        border-radius: 50px;
+        -webkit-transition: all .5s ease;
+        -moz-transition: all .5s ease;
+        -o-transition: all .5s ease;
+        transition: all .5s ease;
+        right: 15px;
+        z-index: 1;
+        top: 26px;
+        color: #fff;
+        font-size: 29px;
+    }
+    .push-menu {
+        display: block;
+    }
+    .nav-bars-dots {
+        display: block;
+    }
+    #menu-switch:checked~.page-wrap #menu-toggle {
+        -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+        transform: rotate(45deg);
+    }
+    .bottom-settings a {
+        margin-right: 18px;
+        margin-left: 17px;
+    }
 }
