--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -406,6 +406,7 @@
 .bg-pro {
     background-color: #172B4D;
 }
+
 .bg-nda {
     background-color: #503CD8;
 }
@@ -586,9 +587,9 @@
 
 .slidecontainer {
     width: 100%;
-  }
-  
-  .slider {
+}
+
+.slider {
     -webkit-appearance: none;
     width: 100%;
     height: 8px;
@@ -598,13 +599,13 @@
     -webkit-transition: .2s;
     transition: opacity .2s;
     border-radius: 5px;
-  }
-  
-  .slider:hover {
+}
+
+.slider:hover {
     opacity: 1;
-  }
-  
-  .slider::-webkit-slider-thumb {
+}
+
+.slider::-webkit-slider-thumb {
     -webkit-appearance: none;
     appearance: none;
     width: 15px;
@@ -612,51 +613,48 @@
     background: #0052cc;
     cursor: pointer;
     border-radius: 50%;
-  }
-  
-  /* .slider::-moz-range-thumb {
+}
+
+.slider::-moz-range-thumb {
     width: 25px;
     height: 25px;
     background: #4CAF50;
     cursor: pointer;
-  } */
+}
 
-  .price-container {
-      padding: 1rem 1rem;
-      border-radius: 8px;
-      border: 2px solid black;
-  }
+.price-container {
+    padding: 1rem 1rem;
+    border-radius: 8px;
+    border: 2px solid black;
+}
 
+.contest-type-cutom {
+    background-color: #f5f5f5;
+    padding: 1rem;
+    border-radius: 5px;
+    margin-top: 1rem;
+}
 
-  .contest-type-cutom {
-      background-color: #f5f5f5;
-      padding: 1rem;
-      border-radius: 5px;
-      margin-top: 1rem;
-  }
-
-  .contest-type-cutom .form-check-input {
+.contest-type-cutom .form-check-input {
     width: 1.3em;
     height: 1.3em;
-  }
+}
 
-
-  .hatchio-account-balance {
+.hatchio-account-balance {
     background-color: #172B4D;
     padding: 1.5rem;
     border-radius: 5px;
     margin-top: 1rem;
-  }
+}
 
-  .hatchio-account-balance .form-check-input {
+.hatchio-account-balance .form-check-input {
     width: 1.3em;
     height: 1.3em;
     background-color: #fff0;
     border: 2px solid rgb(239 239 239 / 25%);
-  }
+}
 
-
-  .g2g-final-preview {
+.g2g-final-preview {
     background-image: url(../img/prize.png);
     background-color: #f1f1f1;
     /* Used if the image is unavailable */
@@ -670,4 +668,4 @@
     border-radius: 10px;
     position: relative;
     padding: 1.5rem;
-  }
+}
