--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -168,8 +168,98 @@ a {
 }
 
 .user-dropdown .dropdown-menu {
-    left: -115px;
-    margin-top: 15px;
+    left: -176px;
+    margin-top: 10px !important;
+}
+
+.user-dropdown .dropdown-menu {
+    position: absolute;
+    top: 100%;
+    z-index: 1000;
+    min-width: 15rem;
+    padding: 0;
+    margin: 0;
+    font-size: 1rem;
+    color: #212529;
+    text-align: left;
+    list-style: none;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid rgba(0, 0, 0, .15);
+    border-radius: .25rem;
+}
+
+.user-dropdown .dropdown-item {
+    display: block;
+    width: 100%;
+    padding: .55rem 1rem;
+    clear: both;
+    font-weight: 400;
+    color: #313030;
+    text-align: inherit;
+    text-decoration: none;
+    white-space: nowrap;
+    background-color: transparent;
+    border: 0;
+}
+
+.user-dropdown .fas {
+    color: #8a8a8a;
+    font-size: 12px;
+}
+
+.user-dropdown .dropdown-item:focus,
+.dropdown-item:hover {
+    color: #1e2125;
+    background-color: #e9ecef;
+}
+
+.notification-dropdown .dropdown-menu {
+    left: -366px;
+    margin-top: 10px !important;
+}
+
+.notification-dropdown .dropdown-menu {
+    position: absolute;
+    top: 100%;
+    z-index: 1000;
+    min-width: 25rem;
+    padding: 0;
+    margin: 0;
+    font-size: 1rem;
+    color: #212529;
+    text-align: left;
+    list-style: none;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid rgba(0, 0, 0, .15);
+    border-radius: .25rem;
+}
+
+.notification-dropdown .dropdown-item {
+    display: block;
+    width: 100%;
+    padding: .55rem 1rem;
+    clear: both;
+    font-weight: 400;
+    color: #313030;
+    text-align: inherit;
+    text-decoration: none;
+    white-space: nowrap;
+    background-color: transparent;
+    border: 0;
+}
+
+.notification-dropdown .dropdown-item:focus,
+.dropdown-item:hover {
+    color: #1e2125;
+    background-color: #e9ecef;
+}
+
+.notification-wraper {
+    height: 300px;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 .create-new-button-plus {
