--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -400,7 +400,7 @@
     flex-direction: column;
     min-width: 0;
     word-wrap: break-word;
-    background-color: #ffffffde;
+    background-color: #ffffff;
     background-clip: border-box;
     /* border: 1px solid rgba(0,0,0,.125); */
     border-radius: .25rem;
@@ -830,4 +830,143 @@
     border-radius: inherit;
     border-bottom: 2px solid #0052cc;
     font-weight: 600;
+}
+
+#price-calculator {
+    margin: 2em 0 0 0;
+}
+
+#price-calculator form {
+    margin: 2em auto;
+    max-width: 600px;
+}
+
+#price-calculator fieldset {
+    border: none;
+    background: #f8f9fb;
+    padding: 2em;
+    margin: 0 0 1em 0;
+    border-radius: 0.25em;
+    text-align: left;
+    width: 100%;
+}
+
+#price-calculator fieldset:hover {
+    -webkit-box-shadow: 3px 3px 10px 2px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 3px 3px 10px 2px rgba(0, 0, 0, 0.1);
+    box-shadow: 3px 3px 10px 2px rgba(0, 0, 0, 0.1);
+}
+
+#price-calculator.rangeslider {
+    background: #e7eaf0;
+}
+
+#price-calculator fieldset h2,
+#price-calculator fieldset h3 {
+    margin-top: 0;
+    margin-bottom: 1em;
+}
+
+hr {
+    border: none;
+    margin: 0 0 2em 0;
+}
+
+#price-calculator .range-slider {
+    margin: 0 0 0 0;
+}
+
+#price-calculator .output,
+#price-calculator .output--seats,
+#price-calculator .output--lisence-cost {
+    /*text-align:center;*/
+    margin: 0 auto;
+    font-size: 2em;
+    display: block;
+    width: auto;
+    margin: 0.5em 0 0 0;
+    clear: both;
+}
+
+#price-calculator .output--discount {
+    color: #ffbc02;
+}
+
+#price-calculator .range-slider {
+    width: 100%;
+}
+
+#price-calculator .range-slider__range {
+    -webkit-appearance: none;
+    width: calc(100% - (73px));
+    height: 10px;
+    border-radius: 5px;
+    background: #d7dcdf;
+    outline: none;
+    padding: 0;
+    margin: 0;
+}
+
+#price-calculator .range-slider__range::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: #2c3e50;
+    cursor: pointer;
+    -webkit-transition: background .15s ease-in-out;
+    transition: background .15s ease-in-out;
+}
+
+#price-calculator .range-slider__range::-webkit-slider-thumb:hover {
+    background: #1abc9c;
+}
+
+#price-calculator .range-slider__range:active::-webkit-slider-thumb {
+    background: #1abc9c;
+}
+
+#price-calculator .range-slider__range::-moz-range-thumb {
+    width: 20px;
+    height: 20px;
+    border: 0;
+    border-radius: 50%;
+    background: #2c3e50;
+    cursor: pointer;
+    -webkit-transition: background .15s ease-in-out;
+    transition: background .15s ease-in-out;
+}
+
+#price-calculator .range-slider__range::-moz-range-thumb:hover {
+    background: #1abc9c;
+}
+
+#price-calculator .range-slider__range:active::-moz-range-thumb {
+    background: #1abc9c;
+}
+
+#price-calculator .range-slider__value {
+    display: inline-block;
+    position: relative;
+    width: 60px;
+    color: #fff;
+    line-height: 20px;
+    text-align: center;
+    border-radius: 3px;
+    background: #2c3e50;
+    padding: 5px 10px;
+    margin-left: 8px;
+}
+
+#price-calculator .range-slider__value:after {
+    position: absolute;
+    top: 8px;
+    left: -7px;
+    width: 0;
+    height: 0;
+    border-top: 7px solid transparent;
+    border-right: 7px solid #2c3e50;
+    border-bottom: 7px solid transparent;
+    content: '';
 }
